# software-purchases

./: .pre-commit-config.yaml  README.md  Release_changes.md  hello.py  main.py  mypy.ini  pyproject.toml  pytype.cfg  requirements.txt
.github/workflows/: ci.yml  create-release.yml  list_artifacts.yml  macos-build.yml  manual-release.yml  multiplatform-build.yml  test.yml  test_2.yml  ubuntu-build.yml  windows-build.yml
docs/: БФТ-Закупки.docx
orders/final_reports/: Отчет о заявках за период - (2024.08.20-2024.10.20).xlsx  Отчет о заявках за период - 2023 кв. 3 - 2024 кв. 3.xlsx
orders/main_template/: Шаблон заявки с справочниками.xlsx
orders/order_templates/: 10.09.2024.xlsx  4.09.2024.xlsx  файл 2.xlsx
resources/orders/main_template/: Шаблон заявки с справочниками.xlsx
src/: app.py
src/backend/aggregates/: country.py  order_template.py  order_template_aggregate.py  software_class.py  sotfware.py
src/backend/applications/: order_templates_handler.py
src/backend/controllers/: final_reports_controller.py  open_app.py  order_template_controller.py
src/backend/models/: country.py  grouped_order.py  order.py  order_template.py  software.py  software_class.py  software_class_section.py  supervisor.py
src/backend/objects/: company.py  country.py  grouped_order.py  license_type.py  order.py  order_template.py  quarter.py  software.py  software_class.py  software_class_section.py  supervisor.py
src/ui/: main_window.py
src/ui/models/: column.py  company_view.py  country_view.py  license_type_view.py  order_template_view.py  order_view.py  software_class_view.py  software_view.py  supervisor_view.py  view_model.py
src/ui/widgets/: catalog_tab.py  catalog_table.py  data_tab.py  main_table.py  status_bar.py  table_bar.py  toolbar.py  treeview.py
src/utils/: config.py  utils.py
