[project]
name = "software-purchases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pip>=24.2",
    "pre-commit>=3.8.0",
    "pybind11>=2.13.5",
    "pyinstaller>=6.10.0",
    "pyqt5-qt5>=5.15.14,<5.15.2",
    "pyqt5-sip>=12.15.0,<12.7.0",
    "pyqt5>=5.15.11",
    "setuptools>=74.0.0",
    "types-pyqt5",
    "wheel>=0.44.0",
]
[tool.ruff]
line-length = 88

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.3",
    "yamlfix>=1.17.0",
    "mypy>=1.11.2",
]
