[project]
name = "software-purchases"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "eventsourcing>=9.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "pybind11>=2.13.5",
    "pyinstaller>=6.10.0",
    "pyqt6>=6.7.1",
    "setuptools>=74.0.0",
    "wheel>=0.44.0",
    "xlsxwriter>=3.2.0",
]

[tool.uv]
dev-dependencies = [
    "mypy>=1.11.2",
    "pre-commit>=3.8.0",
    "ruff>=0.6.3",
    "yamlfix>=1.17.0",
]

[tool.ruff]
line-length = 155

[tool.ruff.lint]
select = ["ALL"]

extend-ignore = [
    #### modules
    "ANN", # flake8-annotations
    "COM", # flake8-commas
    "C90", # mccabe complexity
    "DJ", # django
    "EXE", # flake8-executable
    "T10", # debugger
    "TID", # flake8-tidy-imports

    #### specific rules
    "D100", # ignore missing docs
    "D101",
    "D102",
    "D103",
    "D104",
    "D105",
    "D106",
    "D107",
    "D200",
    "D205",
    "D212",
    "D400",
    "D401",
    "D415",
    "D211",
    "TRY003", # external messages in exceptions are too verbose
    "TD002",
    "TD003",
    "FIX002", # too verbose descriptions of todos
    "D203",
    "PLR0913", # Too many arguments in function definition (x > 5)
    "B018", # Found useless expression. Either assign it to a variable or remove it.
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "RUF001",
    "ERA001",
    "EM102",
]
